# MarkDownNote

./: CMakeLists.txt  EditorPage.qml  LeftContent.qml  Main.qml  MarkDownNote.qml  NoteContent.qml  NoteManager.qml  PreviewPage.qml  RightContent.qml  Sidebar.qml  Topbar.qml  WorkspaceMenu.qml  main.cpp  markdownconverter.cpp  markdownconverter.h  markdownctrl.cpp  markdownctrl.h  markdownhighlighter.cpp  markdownhighlighter.h  src.qrc
Buttons/: MenuButton.qml
buttons/: Manage_notebooksButton.qml  MenuButton.qml  RecycleButton.qml  SplitButton.qml  SubMenuButton.qml  ViewButton.qml
controllers/: editorctrl.cpp  editorctrl.h  expandctrl.cpp  expandctrl.h  exportmenuctrl.cpp  exportmenuctrl.h  importmenuctrl.cpp  importmenuctrl.h  menuctrl.cpp  menuctrl.h  newnotesctrl.cpp  newnotesctrl.h  notebookctrl.cpp  notebookctrl.h  previewctrl.cpp  previewctrl.h  sidebarctrl.cpp  sidebarctrl.h  topbarctrl.cpp  topbarctrl.h
dialogs/: ManageNotebookDialog.qml
leftContent/: EditorPage.qml  FileNameTabs.qml  Topbar.qml
menuManagers/: ExpandMenu.qml  ExportMenu.qml  ImportMenu.qml  MenuMenu.qml  NewNoteMenu.qml  NoteBookMenu.qml
menuManagers/expandMenu/: WindowMenuButton.qml
menuManagers/exportMenu/: ExportDialog.qml
menuManagers/importMenu/: ImportFolderDialog.qml
menuManagers/menuMenu/: HelpMenuButton.qml  SettingDialog.qml
menuManagers/menuMenu/settingContents/: GeneralContent.qml  QuickAccessContent.qml
menuManagers/menuMenu/settingContents/dialogs/: NewQuickNoteScheme.qml
menuManagers/newNoteMenu/: NewFolderDialog.qml  NewNoteDialog.qml  NewQuickNoteDialog.qml
menuManagers/noteBookMenu/: ManagementNotebookDialog.qml  NewNotebookDialog.qml  NewNotebookFromFolderDialog.qml  OpenOtherNotebooksDialog.qml
models/: editorentry.cpp  editorentry.h  editormodel.cpp  editormodel.h  note.cpp  note.h  notebook.cpp  notebook.h  notebooklistmodel.cpp  notebooklistmodel.h  quicknotelistmodel.cpp  quicknotelistmodel.h  quicknotescheme.cpp  quicknotescheme.h  suffixitem.cpp  suffixitem.h  suffixlistmodel.cpp  suffixlistmodel.h
sidebar/: Sidebar.qml  SidebarResponsiveArea.qml
sidebar/sidebarToggle/: HistoryPage.qml  NavigationPage.qml  SearchLocationList.qml  SearchPage.qml  SnippetPage.qml
translations/: zh_CN.ts
